--- a/client/package.json
+++ b/client/package.json
@@ -8,10 +8,12 @@
     "@testing-library/user-event": "^12.1.10",
     "antd": "^4.10.2",
     "bootstrap-material-design": "^4.1.1",
+    "firebase": "^8.2.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-toastify": "^6.2.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
