--- a/server/package.json
+++ b/server/package.json
@@ -18,7 +18,8 @@
     "firebase-admin": "^9.4.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.12",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "slugify": "^1.4.6"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
